// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruby_third_parties_open_telemetry datatype_in_record_exception 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 7,
      "full_filename": "/tmp/bearer-scan/datatype_in_record_exception.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 78,
          "end": 96
        }
      },
      "sink": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 3,
          "end": 99
        },
        "content": "current_span.status = OpenTelemetry::Trace::Status.error(\\"error for user #{current_user.email}\\")"
      },
      "parent_line_number": 7,
      "snippet": "current_span.status = OpenTelemetry::Trace::Status.error(\\"error for user #{current_user.email}\\")",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_0",
      "old_fingerprint": "372ce2e171b67268c33449c0272f1bc2_0",
      "code_extract": "  current_span.status = OpenTelemetry::Trace::Status.error(\\"error for user #{current_user.email}\\")"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 17,
      "full_filename": "/tmp/bearer-scan/datatype_in_record_exception.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 17,
        "end": 17,
        "column": {
          "start": 64,
          "end": 79
        }
      },
      "sink": {
        "start": 17,
        "end": 17,
        "column": {
          "start": 3,
          "end": 82
        },
        "content": "current_span.record_exception(ex, attributes: { \\"user.ip\\" => user.ip_address })"
      },
      "parent_line_number": 17,
      "snippet": "current_span.record_exception(ex, attributes: { \\"user.ip\\" => user.ip_address })",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_1",
      "old_fingerprint": "372ce2e171b67268c33449c0272f1bc2_1",
      "code_extract": "  current_span.record_exception(ex, attributes: { \\"user.ip\\" => user.ip_address })"
    }
  ]
}"
`;

exports[`ruby_third_parties_open_telemetry datatype_in_span_attributes 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 7,
      "full_filename": "/tmp/bearer-scan/datatype_in_span_attributes.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Firstname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 26,
          "end": 41
        }
      },
      "sink": {
        "start": 5,
        "end": 8,
        "column": {
          "start": 3,
          "end": 5
        },
        "content": "current_span.add_attributes({\\n    \\"user.id\\" => user.id,\\n    \\"user.first_name\\" => user.first_name\\n  })"
      },
      "parent_line_number": 5,
      "snippet": "current_span.add_attributes({\\n    \\"user.id\\" => user.id,\\n    \\"user.first_name\\" => user.first_name\\n  })",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_0",
      "old_fingerprint": "91364e9b5bd7abadd8fa318aa086e242_0",
      "code_extract": "  current_span.add_attributes({\\n    \\"user.id\\" => user.id,\\n    \\"user.first_name\\" => user.first_name\\n  })"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 13,
      "full_filename": "/tmp/bearer-scan/datatype_in_span_attributes.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 13,
        "end": 13,
        "column": {
          "start": 10,
          "end": 20
        }
      },
      "sink": {
        "start": 14,
        "end": 14,
        "column": {
          "start": 1,
          "end": 51
        },
        "content": "current_span.set_attribute(\\"current_users\\", users)"
      },
      "parent_line_number": 14,
      "snippet": "current_span.set_attribute(\\"current_users\\", users)",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_1",
      "old_fingerprint": "91364e9b5bd7abadd8fa318aa086e242_1",
      "code_extract": "current_span.set_attribute(\\"current_users\\", users)"
    }
  ]
}"
`;

exports[`ruby_third_parties_open_telemetry datatype_in_span_event 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatype_in_span_event.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 42,
          "end": 60
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 63
        },
        "content": "span.add_event(\\"Schedule job for user: #{current_user.email}\\")"
      },
      "parent_line_number": 2,
      "snippet": "span.add_event(\\"Schedule job for user: #{current_user.email}\\")",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_0",
      "old_fingerprint": "790a624de39af2e1d3e6b5c4a866b1ae_0",
      "code_extract": "span.add_event(\\"Schedule job for user: #{current_user.email}\\")"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 4,
      "full_filename": "/tmp/bearer-scan/datatype_in_span_event.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 4,
        "end": 4,
        "column": {
          "start": 21,
          "end": 39
        }
      },
      "sink": {
        "start": 3,
        "end": 5,
        "column": {
          "start": 1,
          "end": 3
        },
        "content": "span.add_event(\\"Cancel job for user\\", attributes: {\\n  \\"current_user\\" => current_user.email\\n})"
      },
      "parent_line_number": 3,
      "snippet": "span.add_event(\\"Cancel job for user\\", attributes: {\\n  \\"current_user\\" => current_user.email\\n})",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_1",
      "old_fingerprint": "790a624de39af2e1d3e6b5c4a866b1ae_1",
      "code_extract": "span.add_event(\\"Cancel job for user\\", attributes: {\\n  \\"current_user\\" => current_user.email\\n})"
    }
  ]
}"
`;

exports[`ruby_third_parties_open_telemetry datatypes_in_span_init_block 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/datatypes_in_span_init_block.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 64,
          "end": 74
        }
      },
      "sink": {
        "start": 2,
        "end": 4,
        "column": {
          "start": 1,
          "end": 4
        },
        "content": "Tracer.in_span(\\"data leaking\\", attributes: { \\"current_user\\" => user.email, \\"date\\" => DateTime.now }) do |span|\\n  puts \\"in the span block\\"\\nend"
      },
      "parent_line_number": 2,
      "snippet": "Tracer.in_span(\\"data leaking\\", attributes: { \\"current_user\\" => user.email, \\"date\\" => DateTime.now }) do |span|\\n  puts \\"in the span block\\"\\nend",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_0",
      "old_fingerprint": "e3c915377ea892d2c15b106449f05e8c_0",
      "code_extract": "Tracer.in_span(\\"data leaking\\", attributes: { \\"current_user\\" => user.email, \\"date\\" => DateTime.now }) do |span|\\n  puts \\"in the span block\\"\\nend"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 6,
      "full_filename": "/tmp/bearer-scan/datatypes_in_span_init_block.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 6,
        "end": 6,
        "column": {
          "start": 73,
          "end": 83
        }
      },
      "sink": {
        "start": 6,
        "end": 8,
        "column": {
          "start": 1,
          "end": 4
        },
        "content": "SomeOtherTracer.in_span(\\"data leaking\\", attributes: { \\"current_user\\" => user.email, \\"date\\" => DateTime.now }) do |span|\\n  span.add_attributes(user.email)\\nend"
      },
      "parent_line_number": 6,
      "snippet": "SomeOtherTracer.in_span(\\"data leaking\\", attributes: { \\"current_user\\" => user.email, \\"date\\" => DateTime.now }) do |span|\\n  span.add_attributes(user.email)\\nend",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_1",
      "old_fingerprint": "e3c915377ea892d2c15b106449f05e8c_1",
      "code_extract": "SomeOtherTracer.in_span(\\"data leaking\\", attributes: { \\"current_user\\" => user.email, \\"date\\" => DateTime.now }) do |span|\\n  span.add_attributes(user.email)\\nend"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 7,
      "full_filename": "/tmp/bearer-scan/datatypes_in_span_init_block.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 23,
          "end": 33
        }
      },
      "sink": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 3,
          "end": 34
        },
        "content": "span.add_attributes(user.email)"
      },
      "parent_line_number": 7,
      "snippet": "span.add_attributes(user.email)",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_2",
      "old_fingerprint": "e3c915377ea892d2c15b106449f05e8c_2",
      "code_extract": "  span.add_attributes(user.email)"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_open_telemetry",
      "title": "Sensitive data sent to Open Telemetry detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to Open Telemetry.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [Open Telemetry Docs](https://opentelemetry.io/docs/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_open_telemetry",
      "line_number": 11,
      "full_filename": "/tmp/bearer-scan/datatypes_in_span_init_block.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 11,
        "end": 11,
        "column": {
          "start": 38,
          "end": 48
        }
      },
      "sink": {
        "start": 11,
        "end": 11,
        "column": {
          "start": 3,
          "end": 51
        },
        "content": "span.add_event(\\"leaking data for #{user.email}\\")"
      },
      "parent_line_number": 11,
      "snippet": "span.add_event(\\"leaking data for #{user.email}\\")",
      "fingerprint": "949ba3eb3d0c9c539480c41846520b5b_3",
      "old_fingerprint": "e3c915377ea892d2c15b106449f05e8c_3",
      "code_extract": "  span.add_event(\\"leaking data for #{user.email}\\")"
    }
  ]
}"
`;
